# HC-TRUST-LAYER

./: .gitignore  .terminology_allowlist  AGENTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  GENESIS_BLOCK.md  GOVERNANCE.md  HC_BOOTSTRAP.md  HC_CONSTITUTION.md  PROJECT_ORIGIN_RECORD.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  protocol-graph.json  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  test_integration.py  trust-kernel-index.json  verification-map.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
agents/: README.md  chatgpt.md  codex.md  hc-guide-bot.md  task-template.md  workflow.md
council/: README.md  decision-template.md  external-ai-feedback-checklist.md  external-ai-response-summary-template.md  external-ai-review-prompts.md  prompt-packet-index.md  response-collection-guide.md  roles.md  workflow-index.md
docs/: 240-node-layer.md  API.md  ARCHITECTURE.md  AUTOMATION.md  BADGE_STATUS_MODEL.md  CODE_OF_CONDUCT.md  CONTENT_POLICY.md  CONTRIBUTING.md  FIRST_RECORD.md  FIRST_WORKING_RECORD.md  FOUNDATION_STATUS.md  GOVERNANCE.md  HC_CONTROL_PANEL.md  HC_TRUST_ARCHITECTURE.md  HC_TRUST_LAYER.md  PIPELINE_ORCHESTRATION_MAP.md  PROTOCOL.md  SECURITY.md  STANDARD.md  START_HERE.md  VERIFICATION.md  VERIFICATION_FLOW.md  VERIFICATION_STANDARD.md  accountability-defense-layer.md  agent-governance.md  ai-assisted-review.md  ai-collaboration-workflow.md  ai-model-provenance.md  analysis_guidelines.md  anti-spoof-verification-signals.md  anti-spoofing-foundations.md  append-only-review-chain.md  approval-checkpoints.md  architecture-consolidation.md  architecture-roadmap.md  archive-rules.md  authenticated-ai-validator-access.md  automation.md  branch-protection.md  c2pa-bridge-considerations.md  (+173 more)
examples/: README.md  chatgpt-witness-example.md  demo_record.json  hc_council_command.example.json  hc_council_issue_command.example.json  hc_council_run.example.json  (+3 more)
halkalar/: 00-meta.md  (+2 more)
(+941 files in other folders)
