[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hc-trust-layer"
version = "0.1.0"
description = "HC Trust Layer utilities"
readme = "ROADMAP.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi",
  "jsonschema",
  "qrcode",
]

[project.optional-dependencies]
test = [
  "httpx",
]

[project.scripts]
hc-trust = "hc_trust.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
