[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hc-trust-layer"
version = "0.1.0"
description = "HC Trust Layer utilities"
readme = "ROADMAP.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi==0.128.8",
  "jsonschema==4.25.1",
  "pydantic==2.11.7",
  "qrcode[pil]==8.2",
]

[project.scripts]
hc-trust = "hc_trust.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = [
  "anyio==4.12.1",
  "httpx==0.28.1",
  "pytest<9; python_version < '3.10'",
  "pytest==9.0.3; python_version >= '3.10'",
]
