[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hc-trust-layer"
version = "0.1.0"
description = "HC Trust Layer utilities"
readme = "ROADMAP.md"
requires-python = ">=3.14"
dependencies = [
  "fastapi==0.137.2",
  "jsonschema==4.26.0",
  "pydantic==2.13.4",
  "qrcode[pil]==8.2",
]

[project.scripts]
hc-trust = "hc_trust.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = [
  "anyio==4.14.1",
  "httpx==0.28.1",
  "pytest<9; python_version < '3.10'",
  "pytest==9.1.1; python_version >= '3.10'",
]
